<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView1"
            style="@style/TextLabelDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextLabelDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/username"/>

        <EditText
            android:id="@+id/editTextUserName"
            style="@style/TextInputDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextLabelDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="Autofill,LabelFor" />

        <com.code.codingchallengeandroid.customUIButton.CustomUIButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:clickable="true"
            custom:buttonType="1"
            custom:titleText="Register"
            android:focusable="true" />

    </LinearLayout>

</RelativeLayout>